# ha-py-axenco-api

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: set_version.py
src/pyaxencoapi/: __init__.py  api.py  const.py  utils.py
src/pyaxencoapi.egg-info/: PKG-INFO  requires.txt
tests/: conftest.py  test_api.py
