[project]
name = "pyaxencoapi"
version = "0.1.0"
description = "Librairie d'utilisation de l'API REST/Websocket d'Axenco"
readme = "README.md"
authors = [{ name = "Léo Periou", email = "leo.periou@axenco.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "python-socketio[asyncio_client]>=5.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
