[project]
name = "pyaxencoapi"
version = "1.0.6"
description = "Librairie d'utilisation de l'API REST/Websocket d'Axenco"
readme = "README.md"
authors = [{ name = "Léo Periou", email = "leo.periou@axenco.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "python-socketio[asyncio_client]>=5.0.0"
]
keywords = ["axenco", "api", "iot", "myneomitis", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/AXENCO-FR/ha-py-axenco-api"
Repository = "https://github.com/AXENCO-FR/ha-py-axenco-api"
Issues = "https://github.com/AXENCO-FR/ha-py-axenco-api/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.coverage.run]
branch = true
source = ["pyaxencoapi"]

[tool.mypy]
strict = true

[tool.isort]
profile = "black"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "aiohttp",
  "aioresponses",
  "python-socketio[asyncio_client]",
  "coverage",
  "pytest-cov"
]

